--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html, body {
     margin-bottom: 20px;
     padding-bottom: 5px;
 
-    background-image: linear-gradient(110deg, #333 0%, #ccc 100%);
+    background-image: linear-gradient(110deg, rgb(255, 0, 0) 0%, rgb(247, 0, 0) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
